--- a/TP1/CV/CV.css
+++ b/TP1/CV/CV.css
@@ -1,17 +1,49 @@
 #menu
 {
+	position: fixed;
+	width:130px;
+	height: 200px;
+	margin-left: 2px; 
+	margin-top: 20px; 
+	padding: 5px 5px 10px 5px; 
+	background-color: #C0C0C0; 
+	border: 1px solid #808080; 
 	
 }
 
+#principale
+{
+	padding: 10px 10px 10px 10px; 
+	background-color: FloralWhite; 
+	border: 1px solid #808080; 
+	margin: 10px 5px 10px 150px;
+}
 img
 {
-	float: right;
-	top: 10px;
-	width: 50%;
-	height: 50%;
+	top : 10px;
+	left : 800px;
 }
-
+body 
+{
+	background-color: Ivory; 
+	font-family: Verdana, sans-serif; 
+	font-size: 100%;
+}
+h1 
+{
+	font-size: 200%; 
+	color: navy; 
+	padding-left: 15px;
+}
+h2 
+{
+	font-size: 150%; 
+	color: blue; 
+	padding-left: 20px;
+}
 h3
 {
-	color: red;
+	font-size: 120%; 
+	color: CornflowerBlue; 
+	padding-left: 25px;
 }
