--- a/TP3/src/main/webapp/style.css
+++ b/TP3/src/main/webapp/style.css
@@ -7,11 +7,25 @@
 */
 
 .frame{
-        display:block;
-        width:100%;
+    
+    display: block;
+    width: 50%;
 }
 
 .saisie{
-    width:90%;
+    
+    width: 50%;
 }
 
+body 
+{
+    background-color: Silver; 
+    font-family: Verdana, sans-serif; 
+    font-size: 100%;
+}
+h1 
+{
+    font-family: Verdana, sans-serif; 
+    font-size: 200%; 
+    color: navy; 
+}
